# obs-plugins

./: CONTRIBUTING.md  README.md
oculus-mrc/: .editorconfig  CMakeLists.txt  README.txt  frame.cpp  frame.h  log.h  oculus-mrc.cpp  oculus-mrc.h
oculus-mrc/data/: oculusmrc.effect
oculus-mrc/data/locale/: en-US.ini
